# hydrainfer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_run.sh  completions_output.txt  helloworld.cpp  requirements.txt  setup.py  vcpkg.json
benchmark/: analysis_dataset.py  backend.py  backend_request_func.py  benchmark.py  benchmark_api_server.py  benchmark_api_server.sh  benchmark_metric.py  completions_benchmark.py  data_preprocess.py  download_dataset.sh  download_model.sh  download_trace.sh  metric.py  mme_analysis  moe_multistream.sh  offline_inference_vision_language_benchmark.py  online_inference_vision_language_benchmark.py  performance_analyzer.py  profiler.py  sample_dataset.py  simulated_dataset.py  stream_completions_benchmark.py  stress_test.py  synthetic_dataset.py  timestamp.py  utils.py  workload_profiler.py
benchmark/dataset/: download.sh  share_gpt_dataset.py  simulated_dataset.py
benchmark/deprecated/: moe_multistream.py  sample_dataset.py  stream_completions_backend_request_func.py  stream_completions_benchmark.sh
benchmark/kernel/: sum_benchmark.py
benchmark/mme/: MMETestPaper.py  download.sh
benchmark/pope/: POPETestPaper.py  download.sh
benchmark/textcaps/: TextCapsDataset.py  download.sh
benchmark/textvqa/: TextVQATestPaper.py  download.sh
benchmark/vega/: VEGADataset.py  download.sh
benchmark/vizwiz_vqa/: VizwizTestPaper.py  download.sh
benchmark/vqav2/: VQAv2TestPaper.py  download.sh
cmake/: cargo_library.cmake  cc_binary.cmake  pybind_extension.cmake
csrc/: CMakeLists.txt
csrc/benchmark/: CMakeLists.txt  sum_benchmark.cpp
csrc/common/: CMakeLists.txt  concurrent_queue.h  slice.h
csrc/data_transfer/: CMakeLists.txt  block_migration.cpp  block_migration.h  block_migration_pybind.cpp
csrc/engine/: CMakeLists.txt  engine.cpp  engine.h  engine_pybind.cpp  engine_test.cpp  request.h  sequence.h  sequence_test.cpp  stage.h  stage_test.cpp
csrc/kernel/: CMakeLists.txt  dispatch.h
csrc/kernel/activation/: CMakeLists.txt  activation.cu  activation.h  activation_pybind.cpp
csrc/kernel/cache_kernels/: CMakeLists.txt  cache_kernels.cu  cache_kernels.h  cache_kernels_pybind.cpp
csrc/kernel/flash_attn/: CMakeLists.txt  flash_attn_pybind.cpp
csrc/kernel/flash_infer/: CMakeLists.txt  flash_infer.cu
csrc/kernel/inc_kernel/: CMakeLists.txt  inc.cu  inc_test.cpp
csrc/kernel/kv_cache_kernels/: CMakeLists.txt  kv_cache_kernels.cu  kv_cache_kernels.h  kv_cache_kernels_pybind.cpp
csrc/kernel/linear/: CMakeLists.txt  cute_test.cpp  cute_test.cu  linear.cu  linear.h  linear_benchmark.cpp  linear_naive.cuh  linear_smem.cuh  linear_smem_v2.cuh  linear_test.cpp  tile_linear.cu  tile_linear.h  tile_linear_benchmark.cpp  tile_linear_nvbench.cpp  tile_linear_test.cpp
csrc/kernel/moe/: CMakeLists.txt  align_block_kernel.cu  grouped_topk_sigmoid_kernel.cu  moe_kernel.h  moe_kernels_pybind.cpp  permutation_index_kernel.cu  permutation_mask_kernel.cu  topk_softmax_kernel.cu
csrc/kernel/norm/: CMakeLists.txt  norm_pybind.cpp  rms_norm.cu  rms_norm.h
csrc/kernel/position_embedding/: CMakeLists.txt  position_embedding_pybind.cpp  rope.cu  rope.h
csrc/kernel/reduce/: CMakeLists.txt  reduce_pybind.cpp  reduce_sum.cu  reduce_sum.cuh
csrc/kernel/shuffle/: CMakeLists.txt  test_shuffle_xor_sync.cu
csrc/memory/: CMakeLists.txt  block_allocator.cpp  block_allocator.h  block_allocator_test.cpp  kv_cache.cpp  kv_cache.h  kv_cache_test.cpp
csrc/model/: CMakeLists.txt  attention.h  attention_params.h  clip.h  conv.h  embedding.h  fake_model.h  fake_model_test.cpp  linear.h  llama.h  llava.h  model_params.h  model_test.cpp  models.h  position_embed.cpp  position_embed.h
csrc/model_loader/: CMakeLists.txt  state_dict.cpp  state_dict.h  state_dict_test.cpp
csrc/tokenizer/: CMakeLists.txt  hf_tokenizer.cpp  hf_tokenizer.h  hf_tokenizer_test.cpp  tokenizer.h
dxz/: mllm.py
dxz/chat_template/: template_deepseek_vl2.jinja  template_qwen_vl_chat.jinja
dxz/cluster/: __init__.py  async_epdnode.py  cluster.py  dnode.py  enode.py  epdnode.py  loadbalancer.py  migrate.py  node_config.py  node_registry.py  offline_cluster.py  offline_epd_disaggregate_cluster.py  pnode.py  rayepdnode.py  raynode.py  scheduler.py
dxz/config/: entrypoint.yaml  node.yaml
dxz/engine/: __init__.py  async_engine.py  async_llm_engine.py  continuous_batch.py  engine.py  executor.py  isa.py  llm_engine.py  metric.py  mllm_engine.py  mllm_engine_batch_policy.py  new_engine.py  output_token_processor.py  profiler.py  rcb.py  request.py  request_processor.py  scenario.py  scheduler.py  worker.py
dxz/entrypoint/: __init__.py  api_protocol.py  api_server.py  async_stream.py  entrypoint.py  mllm.py  offline_epd_disaggregate.py  offline_single_instance.py  pd_api_server.py  start_ray_cluster.sh
dxz/layer/: activation.py  attention.py  causal_attention.py  linear.py  multihead_attention.py  norm.py  rotary_embedding.py  token_prunning.py
dxz/memory/: __init__.py  block_allocator.py  compiler.py  kv_cache.py  memory.py  memory_management.py  shared_memory_management.py  token_cache.py  vanilla_memory_mangement.py  virtual_kv_cache.py
dxz/model/: __init__.py  clip.py  deepseek_v3.py  deepseek_vl2.py  downloader.py  fake.py  gpt2.py  gpt2_model_parallel.py  llama.py  llava.py  llavanext.py  mistral.py  mixtral.py  model_factory.py  model_forward_parameters.py  model_loader.py  parameters.py  qwen2_vl.py
dxz/model_parallel/: process_group.py
dxz/model_runner/: cuda_graph_model_runner.py
dxz/request/: __init__.py  offline_inference_output.py  output_token_processor.py  rcb.py  request.py  request_processor.py  (+1 more)
evaluation/: common.sh  get_free_gpus.py
experiments/: model_params_pie_chart.py  test_batch_embed_prefill_decode.py  uitl.py
kernel/: CMakeLists.txt
playground/: deepseek_r1.py  deepseek_v2_lite.py  deepseekv2liteconfig  large_model.py  mla.py  moe.py  prefix_cache.py  prefix_cache2.py  test_deepseek_v2_lite.py  test_flashinfer_mla.py  test_prefix_cache.py  test_tensor_parallel.py  test_tensor_parallel.sh  tmp.py
tests/: test_ray_nccl.py
(+245 files in other folders)
