list(APPEND COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(kernel)
add_subdirectory(benchmark)
add_subdirectory(memory)
add_subdirectory(model)
add_subdirectory(huggingface)
add_subdirectory(tokenizer)
add_subdirectory(common)
add_subdirectory(engine)
add_subdirectory(model_loader)
add_subdirectory(data_transfer)