list(APPEND COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(kernel)
add_subdirectory(data_transfer)
set_target_properties(block_migration    PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/hydrainfer/_C/data_transfer)
set_target_properties(flash_attn         PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/hydrainfer/_C/kernel)
set_target_properties(position_embedding PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/hydrainfer/_C/kernel)
set_target_properties(kv_cache_kernels   PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/hydrainfer/_C/kernel)
set_target_properties(cache_kernels      PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/hydrainfer/_C/kernel)
set_target_properties(norm               PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/hydrainfer/_C/kernel)
set_target_properties(activation         PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/hydrainfer/_C/kernel)
 

if(FULL_COMPILE)
    add_subdirectory(benchmark)
    add_subdirectory(common)
endif()